Issue #245 : fix flip card not scrollable on ios

--- a/src/app/components/flip-card/flip-card.component.scss
+++ b/src/app/components/flip-card/flip-card.component.scss
@@ -44,6 +44,7 @@
 
     .front {
       transform: rotate3d(0, 0, 0, 0);
+      z-index: 1;
     }
 
     .back {
